--- a/style.css
+++ b/style.css
@@ -54,3 +54,39 @@ textarea {
     outline: none;
     outline-style: none;
 }
+
+@media only screen and (max-width: 1100px) {
+    h1 {
+      font-size: 1.8rem;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    textarea {
+        font-size: 1rem;
+    }
+  }
+
+  @media only screen and (max-width: 800px) {
+    h1 {
+      font-size: 1.5rem;
+    }
+    h2 {
+        font-size: 1.1rem;
+    }
+    textarea {
+        font-size: 0.7rem;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    h1 {
+      font-size: 1.3rem;
+    }
+    h2 {
+        font-size: 1rem;
+    }
+    textarea {
+        font-size: 0.6rem;
+    }
+  }
