--- a/style.css
+++ b/style.css
@@ -1,92 +1,92 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Josefin Sans", sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .mainDiv {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  background: #3498db;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    background: #3498db;
 }
 
 .centerDiv {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 h1 {
-  text-transform: capitalize;
-  margin-bottom: 30px;
-  color: #ecf0f1;
-  text-shadow: 1px 2px 3px #2980b9;
-  font-size: 2.1rem;
+    text-transform: capitalize;
+    margin-bottom: 30px;
+    color: #ecf0f1;
+    text-shadow: 1px 2px 3px #2980b9;
+    font-size: 2.1rem;
 }
 
 h2 {
-  text-align: center;
+    text-align: center;
 }
 
 textarea {
-  background-color: #444;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-  border-radius: 10px 10px 0 0;
-  border: 20px solid #34495e;
-  color: white;
-  outline: none;
-  outline-style: none;
-  font-size: 1.3rem;
+    background-color: #444;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
+    border-radius: 10px 10px 0 0;
+    border: 20px solid #34495e;
+    color: white;
+    outline: none;
+    outline-style: none;
+    font-size: 1.3rem;
 }
 
 .mainbtn {
-  padding: 10px 20px;
-  border-radius: 20px;
-  border: 5px solid #2980b9;
-  background: #ecf0f1;
-  font-size: 1rem;
-  outline: none;
-  outline-style: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: 5px solid #2980b9;
+    background: #ecf0f1;
+    font-size: 1rem;
+    outline: none;
+    outline-style: none;
 }
 
 @media only screen and (max-width: 1100px) {
-  h1 {
-    font-size: 1.8rem;
+    h1 {
+      font-size: 1.8rem;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    textarea {
+        font-size: 1rem;
+    }
   }
-  h2 {
-    font-size: 1.5rem;
-  }
-  textarea {
-    font-size: 1rem;
-  }
-}
 
-@media only screen and (max-width: 800px) {
-  h1 {
-    font-size: 1.5rem;
+  @media only screen and (max-width: 800px) {
+    h1 {
+      font-size: 1.5rem;
+    }
+    h2 {
+        font-size: 1.1rem;
+    }
+    textarea {
+        font-size: 0.7rem;
+    }
   }
-  h2 {
-    font-size: 1.1rem;
-  }
-  textarea {
-    font-size: 0.7rem;
-  }
-}
 
-@media only screen and (max-width: 600px) {
-  h1 {
-    font-size: 1.3rem;
+  @media only screen and (max-width: 600px) {
+    h1 {
+      font-size: 1.3rem;
+    }
+    h2 {
+        font-size: 1rem;
+    }
+    textarea {
+        font-size: 0.6rem;
+    }
   }
-  h2 {
-    font-size: 1rem;
-  }
-  textarea {
-    font-size: 0.6rem;
-  }
-}
